<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleLoginApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_useractivity">Useractivity</string>
    <string name="login_text">Sign in</string>
    <string name="username_text">Username</string>
    <string name="pass_text">Password</string>
    <string name="attempt_text">Attempt:</string>
    <string name="btn_text">Login</string>
    <string name="user_text">Welcome Hasan Tarek</string>


</resources>
